# tamaowlchi

./: Cargo.toml  LICENSE.md  README.md  ascii_art.txt
.github/workflows/: release.yml
src/: config_file.rs  constants.rs  main.rs  tamaowlchi.rs  user_actions.rs
src/ascii_art/: baby_owl.txt  dead_owl.txt  midlife_owl.txt  old_owl.txt
