[package]
name = "tamaowlchi"
version = "0.1.0"
edition = "2021"
authors = ["Alustrat <pro.alustrat@pm.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.16", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
magic-crypt = "3.1.13"
directories = "5.0"
